--- a/.github/workflows/Snake.yml
+++ b/.github/workflows/Snake.yml
@@ -25,11 +25,11 @@ jobs:
     # Checks repo under $GITHUB_WORKSHOP, so your job can access it
       - uses: actions/checkout@v2
 
-    # Generates the snake  
+    # Generates the snake
       - uses: Platane/snk@master
         id: snake-gif
         with:
-          github_user_name: isaac545454
+          github_user_name: samuk190
           # these next 2 lines generate the files on a branch called "output". This keeps the main branch from cluttering up.
           gif_out_path: dist/github-contribution-grid-snake.gif
           svg_out_path: dist/github-contribution-grid-snake.svg
